// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorModal matches snapshot 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: auto;
  overflow: hidden;
  width: 40rem;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  background-color: white;
  box-shadow: 0 0 2rem rgba(0,0,0,0.05),0 0 4rem rgba(0,0,0,0.08);
}

.c2 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover {
  color: #0064A0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5rem;
  padding: 1.5rem 3rem;
  background: #f1f1f1;
  border-bottom: solid 0.1rem #fafafa;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c7 {
  color: #424242;
  font-size: 2.4rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  padding: 1.5rem 0 1rem 0;
  margin: 0;
  font-weight: 400;
  padding: 1.5rem 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 3rem;
}

+ .c6 {
  margin-top: 0;
}

.c11 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  background-color: rgba(0,0,0,0.3);
}

.c0 {
  top: 0;
  z-index: 140;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  z-index: 1;
}

.c5 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  cursor: pointer;
  margin-right: 0;
  padding-right: 0;
  color: #c5c5c5;
  height: 2rem;
  width: 2rem;
}

.c5:hover {
  color: #5e6062;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 3rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c10:hover {
  background-color: ,#be3c08,;
}

.c10:active {
  background-color: ,#b03808,;
}

.c10:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c8 {
  padding: 1.5rem 0;
}

@media screen and (max-width:75em) {
  .c4 {
    color: #424242;
    font-size: 1.6rem;
    line-height: 2rem;
    -webkit-letter-spacing: -0.02rem;
    -moz-letter-spacing: -0.02rem;
    -ms-letter-spacing: -0.02rem;
    letter-spacing: -0.02rem;
    padding: 1rem 0 1rem 0;
    margin: 0;
  }
}

@media screen and (max-width:75em) {
  .c7 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

<div
  className="c0 error-modal"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <header
        className="c3"
      >
        <h1
          className="c4"
        >
          Error
        </h1>
        <svg
          aria-hidden="true"
          className="c5"
          focusable="false"
          height="15px"
          onClick={[Function]}
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </header>
      <div
        className="c6"
      >
        <h3
          className="c7"
          id="modal-title"
        >
          Uh-oh, there's been a glitch
        </h3>
        <div
          className="c8"
          dangerouslySetInnerHTML={
            Object {
              "__html": "
  We're not quite sure what went wrong. Restart your browser. If this doesn't solve
  the problem, visit our <a href=\\"https://help.openstax.org/s/\\" target=\\"_blank\\">Support Center</a>.
",
            }
          }
        />
      </div>
      <div
        className="c9"
      >
        <button
          className="c10"
          data-testid="clear-error"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
  <div
    className="c11"
  />
</div>
`;

exports[`ErrorModal matches snapshots with recorded error ids 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: auto;
  overflow: hidden;
  width: 40rem;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  background-color: white;
  box-shadow: 0 0 2rem rgba(0,0,0,0.05),0 0 4rem rgba(0,0,0,0.08);
}

.c2 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover {
  color: #0064A0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5rem;
  padding: 1.5rem 3rem;
  background: #f1f1f1;
  border-bottom: solid 0.1rem #fafafa;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c7 {
  color: #424242;
  font-size: 2.4rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  padding: 1.5rem 0 1rem 0;
  margin: 0;
  font-weight: 400;
  padding: 1.5rem 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 3rem;
}

+ .c6 {
  margin-top: 0;
}

.c12 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  background-color: rgba(0,0,0,0.3);
}

.c0 {
  top: 0;
  z-index: 140;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  z-index: 1;
}

.c5 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  cursor: pointer;
  margin-right: 0;
  padding-right: 0;
  color: #c5c5c5;
  height: 2rem;
  width: 2rem;
}

.c5:hover {
  color: #5e6062;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 3rem;
}

.c9 {
  color: #424242;
  font-size: 1.4rem;
  line-height: 1.6rem;
  font-weight: normal;
  font-size: 0.9rem;
  color: #424242;
  opacity: 0.6;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c11:hover {
  background-color: ,#be3c08,;
}

.c11:active {
  background-color: ,#b03808,;
}

.c11:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c8 {
  padding: 1.5rem 0;
}

@media screen and (max-width:75em) {
  .c4 {
    color: #424242;
    font-size: 1.6rem;
    line-height: 2rem;
    -webkit-letter-spacing: -0.02rem;
    -moz-letter-spacing: -0.02rem;
    -ms-letter-spacing: -0.02rem;
    letter-spacing: -0.02rem;
    padding: 1rem 0 1rem 0;
    margin: 0;
  }
}

@media screen and (max-width:75em) {
  .c7 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

<div
  className="c0 error-modal"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <header
        className="c3"
      >
        <h1
          className="c4"
        >
          Error
        </h1>
        <svg
          aria-hidden="true"
          className="c5"
          focusable="false"
          height="15px"
          onClick={[Function]}
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </header>
      <div
        className="c6"
      >
        <h3
          className="c7"
          id="modal-title"
        >
          Uh-oh, there's been a glitch
        </h3>
        <div
          className="c8"
          dangerouslySetInnerHTML={
            Object {
              "__html": "
  We're not quite sure what went wrong. Restart your browser. If this doesn't solve
  the problem, visit our <a href=\\"https://help.openstax.org/s/\\" target=\\"_blank\\">Support Center</a>.
",
            }
          }
        />
        <div
          className="c9"
        >
          some-error-id
        </div>
      </div>
      <div
        className="c10"
      >
        <button
          className="c11"
          data-testid="clear-error"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
  <div
    className="c12"
  />
</div>
`;
